# aiogram-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  copier.yaml  pyproject.toml
project/{{project_name}}/: .gitignore  CHANGELOG.md  Dockerfile  README.md.jinja  pyproject.toml.jinja  {% if package_manager == 'poetry' %}pyproject.toml{% endif %}.jinja  {% if package_manager == 'uv' %}Dockerfile{% endif %}.jinja  {% if package_manager == 'uv' %}pyproject.toml{% endif %}.jinja  {% if package_manager == poetry %}pyproject.toml{% endif %}.jinja  {% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja  {% if use_redis or use_sqlalchemy or include_test %}docker-compose.yml{% endif %}  {% if use_redis or use_sqlalchemy or include_test %}docker-compose.yml{% endif %}.jinja
project/{{project_name}}/src/: config.py.jinja  {% if use_sqlalchemy %}alembic.ini{% endif %}
project/{{project_name}}/src/bot/: exceptions.py.jinja  loader.py.jinja  main.py  main.py.jinja
project/{{project_name}}/src/bot/service/: __init__.py.jinja  {% if use_sqlalchemy %}user.py{% endif %}
project/{{project_name}}/src/bot/utils/: messages.py  models.py
project/{{project_name}}/src/bot/{% if include_test %}tests{% endif %}/: {% if include_test %}conftest.py{% endif %}.jinja
project/{{project_name}}/src/{% if use_sqlalchemy %}database{% endif %}/: {% if use_sqlalchemy %}__init__.py{% endif %}  {% if use_sqlalchemy %}core.py{% endif %}  {% if use_sqlalchemy %}mixins.py{% endif %}  {% if use_sqlalchemy %}models.py{% endif %}
project/{{project_name}}/{% if use_sqlalchemy %}migration{% endif %}/: {% if use_sqlalchemy %}env.py{% endif %}  {% if use_sqlalchemy %}script.py.mako{% endif %}
project/{{project_name}}/{% if use_sqlalchemy %}migration{% endif %}/{% if use_sqlalchemy %}versions{% endif %}/: {% if use_sqlalchemy %}2024_01_07_2001-fe58b071a045_create_user_table.py{% endif %}
project/{{project_name}}/{% if use_workflow %}.github{% endif %}/{% if use_workflow %}workflows{% endif %}/: {% if use_semantic_release %}increase_version.yaml{% endif %}  {% if use_workflow %}deploy.yaml{% endif %}.jinja
src/bot/: loader.py  main.py
{{project_name}}/: pyproject.toml.jinja
{{project_name}}/src/: config.py  config.py.jinja
{{project_name}}/src/bot/: main.py
(+13 files in other folders)
